made href changes

--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
        <tr>
         <fieldset><h3>ACTORS</h3></fieldset>
     <br>
-        <td><a href="/HTML/vijaysongs.html"> <img src="../MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" height=200 width="170"> </a></td>
+        <td><a href="/HTML/"> <img src="../MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" height=200 width="170"> </a></td>
         <td>
             <a href="/HTML/SURYASONGS.html"><img src="../MEDIA/IMAGES/actors/SURYA/SURYA.jpeg" height=200 width="170"></a>
         </td>
