--- a/ajith.html
+++ b/ajith.html
@@ -83,7 +83,7 @@
             
             <tr>
                 <td>
-                    <a href="/HTML/music.html"><button>BACK</button></a>
+                    <a href="/HTMLSpotStar/music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
