changed the href Link

--- a/movie.html
+++ b/movie.html
@@ -103,7 +103,7 @@
                 <td><a href="https://youtu.be/QS2UPxj_Y9w?si=dWwftRclqFCqxqiR"><img src="../MEDIA/IMAGES/TAMILMOVIE/romantic/sita ramam.jpg" height="200" width="200";></a></td></a></td>
             </tr>
             <tr >
-                <td><a href="/HTML/home.html"><button style="color: white;">back</button></a></td>
+                <td><a href="/SpotStar/home.html"><button style="color: white;">back</button></a></td>
             </tr>
             
     </table>
