--- a/music.html
+++ b/music.html
@@ -12,18 +12,18 @@
        <tr>
         <fieldset><h3>ACTORS</h3></fieldset>
     <br>
-        <td><a href="/HTML/"> <img src="../MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" height=200 width="170"> </a></td>
+        <td><a href="/SpotStar/"> <img src="../MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" height=200 width="170"> </a></td>
         <td>
-            <a href="/HTML/SURYASONGS.html"><img src="../MEDIA/IMAGES/actors/SURYA/SURYA.jpeg" height=200 width="170"></a>
+            <a href="/SpotStar/SURYASONGS.html"><img src="../MEDIA/IMAGES/actors/SURYA/SURYA.jpeg" height=200 width="170"></a>
         </td>
         <td>
-            <a href="/HTML/SIVAKARTHIKEYANsongs.html"><img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/SIVAKARTHIKEYAN.jpeg" height=200 width="170"></a>
+            <a href="/SpotStar/SIVAKARTHIKEYANsongs.html"><img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/SIVAKARTHIKEYAN.jpeg" height=200 width="170"></a>
         </td>
         <td>
-            <a href="/HTML/dhanush.html"><img src="../MEDIA/IMAGES/actors/dhanush/DHANUSHH.jpeg" height=200 width="170"></a>
+            <a href="/SpotStar/dhanush.html"><img src="../MEDIA/IMAGES/actors/dhanush/DHANUSHH.jpeg" height=200 width="170"></a>
         </td>
         <td>
-            <a href="/HTML/ajith.html"><img src="../MEDIA/IMAGES/actors/AJITH/Ajith.jpg" height=200 width="170"></a>
+            <a href="/SpotStar/ajith.html"><img src="../MEDIA/IMAGES/actors/AJITH/Ajith.jpg" height=200 width="170"></a>
         </td>
         </tr>
        
@@ -33,12 +33,12 @@
             <fieldset><h3>MUSIC DIRECTORS</h3></fieldset>
             <br>
             <tr>
-                <td><a href="/HTML/yuvan.html"><img src="../MEDIA/IMAGES/music directors/YUVAN/yuvan.jpg" height=200 width="170"></a></td>
+                <td><a href="/SpotStar/yuvan.html"><img src="../MEDIA/IMAGES/music directors/YUVAN/yuvan.jpg" height=200 width="170"></a></td>
 
-                <td><a href="/HTML/ARR.html"><img src="../MEDIA/IMAGES/music directors/ARR/ARR.jpg" height=200 width="170"></a></td>
-                <td><a href="/HTML/ANIRUTH.html"><img src="../MEDIA/IMAGES/music directors/ANIRUTH/ANIRUTH.jpg" height=200 width="170"></a></td>
-                <td><a href="/HTML/vijayantony.html"><img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/vijayantony.jpg" height=200 width="170"></a></td>
-                <td><a href="/HTML/gv.html"><img src="../MEDIA/IMAGES/music directors/GV/gv.jpg" height=200 width="170"></a></td>
+                <td><a href="/SpotStar/ARR.html"><img src="../MEDIA/IMAGES/music directors/ARR/ARR.jpg" height=200 width="170"></a></td>
+                <td><a href="/SpotStar/ANIRUTH.html"><img src="../MEDIA/IMAGES/music directors/ANIRUTH/ANIRUTH.jpg" height=200 width="170"></a></td>
+                <td><a href="/SpotStar/vijayantony.html"><img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/vijayantony.jpg" height=200 width="170"></a></td>
+                <td><a href="/SpotStar/gv.html"><img src="../MEDIA/IMAGES/music directors/GV/gv.jpg" height=200 width="170"></a></td>
                 
             </tr>
             <table>
@@ -47,15 +47,15 @@
                         <h3>PLAYBACK SINGERS</h3>
                     </fieldset>
                     <br>
-                    <td><a href="/HTML/sherya.html"><img src="../MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/sherya.html"><img src="../MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/karthiksinger.html"><img src="../MEDIA/IMAGES/playback singer/karthick/karthik.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/karthiksinger.html"><img src="../MEDIA/IMAGES/playback singer/karthick/karthik.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/JONITA.html"><img src="../MEDIA/IMAGES/playback singer/jonita/jonita.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/JONITA.html"><img src="../MEDIA/IMAGES/playback singer/jonita/jonita.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/shankarmahadevan.html"><img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/shankar mahadevan.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/shankarmahadevan.html"><img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/shankar mahadevan.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/chinmayi.html"><img src="../MEDIA/IMAGES/playback singer/chinmayi/chimayi.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/chinmayi.html"><img src="../MEDIA/IMAGES/playback singer/chinmayi/chimayi.jpg" height=200 width="170"></a></td>
                 </tr>
             </table>
             <table>
@@ -64,15 +64,15 @@
                         <h3>LYRICIST</h3>
                     </fieldset>
                     <br>
-                    <td><a href="/HTML/THAMARAI.html"><img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Thamarai.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/THAMARAI.html"><img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Thamarai.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/NA%20MUTHUKUMAR.html"><img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/NA muthukumar.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/NA%20MUTHUKUMAR.html"><img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/NA muthukumar.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/PA-VIJAY.html"><img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/pa-vijay.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/PA-VIJAY.html"><img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/pa-vijay.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/shankarmahadevan.html"><img src="../MEDIA/IMAGES/LYRICSIST/VAALI/VAALI.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/shankarmahadevan.html"><img src="../MEDIA/IMAGES/LYRICSIST/VAALI/VAALI.jpg" height=200 width="170"></a></td>
 
-                    <td><a href="/HTML/Vairamuthu.html"><img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/VAIRAMUTHU.jpg" height=200 width="170"></a></td>
+                    <td><a href="/SpotStar/Vairamuthu.html"><img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/VAIRAMUTHU.jpg" height=200 width="170"></a></td>
                 </tr>
             </table>
     </table>
