--- a/otpverfication.html
+++ b/otpverfication.html
@@ -11,10 +11,10 @@
     <br>
     <input type="number" placeholder="OTP">
     <br>
-    <button><a href="/HTML/updationmsg.html">Verify</a></button>
+    <button><a href="/SpotStar/updationmsg.html">Verify</a></button>
     <br>
     <label>Send OTP Again?</label>
     <br>
-    <a href="/HTML/forgettenpassword.html"><button>RESENT OTP</button></a>
+    <a href="/SpotStar/forgettenpassword.html"><button>RESENT OTP</button></a>
 </body>
 </html>
