--- a/signup.html
+++ b/signup.html
@@ -41,8 +41,8 @@
         <br>
         <table>
             <tr>
-                <td><a href="/HTML/index.html?">Cancel </a></td>
-                <td><a href="/HTML/newpassword.html">Next</a></td>
+                <td><a href="/SpotStar/index.html?">Cancel </a></td>
+                <td><a href="/SpotStar/newpassword.html">Next</a></td>
             </tr>
         </table>
      
