--- a/PA-VIJAY.html
+++ b/PA-VIJAY.html
@@ -83,7 +83,7 @@
             
             <tr>
                 <td>
-                    <a href="/HTML/music.html"><button>BACK</button></a>
+                    <a href="/SpotStar/music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
