--- a/THAMARAI.html
+++ b/THAMARAI.html
@@ -85,7 +85,7 @@
             
             <tr>
                 <td>
-                    <a href="/HTML/music.html"><button>BACK</button></a>
+                    <a href="/SpotStar/music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
