changed the href

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <input type="Password"
         placeholder="Password">
         <br>
-         <button><a href="SpotStar/home.html">login</a></button>
+         <button><a href=" /home.html">login</a></button>
             <br>
-            <a href="SpotStar/forgettenpassword.html">Forgotten your password?</a>
+            <a href=" /forgettenpassword.html">Forgotten your password?</a>
             <br>
-            <label>Don't have an account? </label><a href="SpotStar/signup.html">Signup</a></fieldset>
+            <label>Don't have an account? </label><a href=" /signup.html">Signup</a></fieldset>
     
         
     </form>
