--- a/vijaysongs.html
+++ b/vijaysongs.html
@@ -103,7 +103,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="/SpotStar/music.html"><button>BACK</button></a>
+                    <a href=" /music.html"><button>BACK</button></a>
                     
                 </td>
             </tr>
