--- a/shankarmahadevan.html
+++ b/shankarmahadevan.html
@@ -84,7 +84,7 @@
             
             <tr>
                 <td>
-                    <a href="/SpotStar/music.html"><button>BACK</button></a>
+                    <a href=" /music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
