--- a/SURYASONGS.html
+++ b/SURYASONGS.html
@@ -21,10 +21,10 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/actors/SURYA Ayan.jpeg"alt="" height="200" width="150">
+                <img src="../MEDIA/IMAGES/actors/SURYA/ Ayan.jpeg"alt="" height="200" width="150">
             </td>
                 <td>
-                    <audio src="../MEDIA/AUDIOS/SURYA Ayan.mp3" controls ></audio>
+                    <audio src="../MEDIA/AUDIOS/SURYA/ Ayan.mp3" controls ></audio>
                 </td>
                 <td><img src="../MEDIA/IMAGES/actors/SURYA/7aum Arivu.jpeg"alt="" height="200" 
                     width="150">
@@ -83,7 +83,7 @@
             
             <tr>
                 <td>
-                    <a href=" /music.html"><button>BACK</button></a>
+                    <a href="/SpotStar/music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
