--- a/forgettenpassword.html
+++ b/forgettenpassword.html
@@ -10,6 +10,6 @@
     <br>
     <input type="number" placeholder="PhoneNumber">
     <br>
-    <a href=" /otpverfication.html"><button>SEND OTP</button></a>
+    <a href="/SpotStar/otpverfication.html"><button>SEND OTP</button></a>
 </body>
 </html>
