--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
     <fieldset>
         <table>
             <tr>
-                <td><a href=" /music.html"><img src="../MEDIA/IMAGES/HOME PAGE/MUSIC.jpeg" height=500; width=500;></a></td>
+                <td><a href="/SpotStar/music.html"><img src="../MEDIA/IMAGES/HOME PAGE/MUSIC.jpeg" height=500; width=500;></a></td>
                 <td>
-                    <a href=" /movie.html"><img  src="../MEDIA/IMAGES/HOME PAGE/MOVIE.jpeg"height=500; width=500;></a>
+                    <a href="/SpotStar/movie.html"><img  src="../MEDIA/IMAGES/HOME PAGE/MOVIE.jpeg"height=500; width=500;></a>
                 </td>
             </tr>
         </table>
