--- a/newpassword.html
+++ b/newpassword.html
@@ -14,7 +14,7 @@
     <br>
     <input type="Password" placeholder="Confirm Password">
     <br>
-    <a href=" /updationmsg.html"><button>Update</button></a>
+    <a href="/SpotStar/updationmsg.html"><button>Update</button></a>
     
 
 </body>
