--- a/otpverfication.html
+++ b/otpverfication.html
@@ -11,10 +11,10 @@
     <br>
     <input type="number" placeholder="OTP">
     <br>
-    <button><a href=" /updationmsg.html">Verify</a></button>
+    <button><a href="/ /updationmsg.html">Verify</a></button>
     <br>
     <label>Send OTP Again?</label>
     <br>
-    <a href=" /forgettenpassword.html"><button>RESENT OTP</button></a>
+    <a href="/ /forgettenpassword.html"><button>RESENT OTP</button></a>
 </body>
 </html>
