--- a/karthiksinger.html
+++ b/karthiksinger.html
@@ -83,7 +83,7 @@
             
             <tr>
                 <td>
-                    <a href=" /music.html"><button>BACK</button></a>
+                    <a href="/SpotStar/music.html"><button>BACK</button></a>
                 </td>
             </tr>
     </table>
